# argus-redact

./: .codecov.yml  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.full  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  SECURITY.md  build.sh  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: perf.yml  release.yml  test.yml
benchmarks/: README.md  __init__.py  __main__.py  report.py
benchmarks/adapters/: __init__.py  ai4privacy.py  base.py  conll2003.py  gretel_finance.py  nemotron.py  wikiann.py
demo/: README.md  app.py  requirements.txt  setup.sh
docs/: README.md  api-reference.md  architecture.md  benchmark-report.md  cli-reference.md  comparison.md  configuration.md  design-self-reference.md  design-streaming-incremental.md  generate_pdf.py  getting-started.md  integration-frameworks.md  integration-llm.md  known-issues.md  language-packs.md  layer3-benchmark.md  perf-history.md  performance.md  pii-types.md  prvl-standard.md  security-model.md  security.md  sensitive-info.md  whitepaper-chinese-pii.md
rust/src/: lib.rs  merger.rs  patterns.rs  pseudonym.rs  restore.rs  types.rs
scripts/: build_zh_dicts.py  run_mutmut.py
src/argus_redact/: __init__.py  _safe_io.py  _types.py  layers.py  report.py  server.py  streaming.py  structured.py  telemetry.py
tests/: conftest.py
tests/architecture/: test_alias_coverage.py  test_catalog_drift.py  test_compliance_metadata.py  test_hints.py  test_layers_ssot.py  test_near_miss_hints.py  test_no_overclaim.py  test_realistic_drift.py  test_suspicious_hints.py
tests/benchmark/: README.md  __main__.py  baseline.json  compare_baseline.py  evaluator.py  model.py  report.py  run_perf_budget.py  test_ai4privacy.py  test_ai4privacy_full.py  test_benchmark.py  test_concurrency.py  test_layer3_models.py  test_performance.py  test_prvl.py  test_prvl_multi_llm.py  test_prvl_v0_5_x.py
tests/cli/: conftest.py  test_cli.py  test_cli_pseudonym_llm.py  test_cli_strategy_override.py
tests/compliance/: test_profiles.py  test_report_format.py  test_risk.py
tests/core/: test_detect_partial.py  test_detection_invariant.py  test_display_marker.py  test_faker_aliases.py  test_fakers_en_reserved.py  test_fakers_numeric.py  test_fakers_shared_reserved.py  test_fakers_zh_reserved.py  test_function_calling.py  test_hints_lookup.py  test_input_pollution_check.py  test_key_entry.py  test_lang_detect.py  test_merge.py  test_names_whitelist.py  test_pseudonym.py  test_pseudonym_llm_profile.py  test_realistic_strategy.py  test_redact.py  test_replace.py  test_replacer_keep.py  test_reserved_range_scanner.py  test_restore.py  test_restore_aliases.py  test_self_reference_keep.py  test_strategy_overrides.py  test_strategy_reversibility.py  test_streaming.py  test_streaming_buffer.py  test_streaming_persistence.py  test_structured.py  test_telemetry.py  test_types_return.py  test_unified_prefix_kwarg.py
tests/detection/: test_patterns.py
tests/fixtures/: adversarial_tests.json  benchmark_en.json  benchmark_zh.json  br_patterns.json  de_patterns.json  email.json  en_credit_card.json  en_date_of_birth.json  en_passport.json  en_phone.json  en_self_reference.json  en_sensitive.json  en_ssn.json  function_calling.json  iban.json  in_patterns.json  ja_my_number.json  ja_phone.json  ko_phone.json  ko_rrn.json  mixed_lang.json  mixed_zh_en_sensitive.json  ner_zh.json  realistic_scenarios.json  redact_config.json  redact_roundtrip.json  shared_gender.json  shared_imei.json  shared_ip.json  shared_mac.json  shared_secrets.json  shared_url_token.json  uk_patterns.json  zh_address.json  zh_age.json  zh_bank_card.json  zh_biometric.json  zh_credit_code.json  zh_criminal_record.json  zh_date_of_birth.json  (+19 more)
tests/glue/: test_concurrent.py  test_golden.py  test_mixed_lang.py  test_profiles.py  test_realistic.py  test_redact.py  test_redact_config.py  test_redact_detailed.py  test_redact_mixed.py  test_redact_ner.py  test_redact_ner_multilang.py  test_redact_semantic.py  test_report.py  test_streaming.py  test_structured.py  test_structured_paths.py  test_types_return.py
tests/impure/: test_hanlp_adapter.py  test_integration_ner.py  test_integration_ollama.py  test_ja_ko_ner_real.py  test_ner.py  test_spacy_adapter.py  test_spacy_real.py
tests/integration/: test_fastapi.py  test_langchain.py  test_langchain_ollama.py  test_llamaindex.py  test_mcp.py  test_mcp_server_token.py  test_presidio.py  test_server.py
(+171 files in other folders)
