[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-redact"
version = "0.1.1"
description = "Encrypt PII, not meaning. Locally."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Wang Yu" },
]
keywords = ["pii", "redact", "privacy", "llm", "anonymization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/wan9yu/argus-redact"
Repository = "https://github.com/wan9yu/argus-redact"
Issues = "https://github.com/wan9yu/argus-redact/issues"

[project.optional-dependencies]
zh = ["hanlp>=2.1"]
en = ["spacy>=3.0"]
full = ["hanlp>=2.1", "spacy>=3.0", "llama-cpp-python>=0.2"]
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.8", "build>=1.0", "requests>=2.28"]

[project.scripts]
argus-redact = "argus_redact.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/argus_redact"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests that require model loading (deselect with '-m \"not slow\"')",
    "ner: marks tests that require NER models",
    "semantic: marks tests that require Layer 3 LLM",
]
