[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "argus-redact"
version = "0.6.3"
description = "Encrypt PII, not meaning. Locally."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Wang Yu" },
]
keywords = ["pii", "redact", "privacy", "llm", "anonymization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/wan9yu/argus-redact"
Repository = "https://github.com/wan9yu/argus-redact"
Issues = "https://github.com/wan9yu/argus-redact/issues"

[project.optional-dependencies]
zh = ["hanlp>=2.1,<3.0"]
en = ["spacy>=3.0,<4.0"]
ja = ["spacy>=3.0,<4.0"]
ko = ["spacy>=3.0,<4.0"]
de = ["spacy>=3.0,<4.0"]
uk = ["spacy>=3.0,<4.0"]
in = ["spacy>=3.0,<4.0"]
br = []
full =["hanlp>=2.1,<3.0", "spacy>=3.0,<4.0", "llama-cpp-python>=0.2,<1.0"]
presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
mcp = ["mcp>=1.0"]
serve = ["uvicorn>=0.20", "starlette>=0.27"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.21", "pytest-cov>=5.0", "ruff>=0.8", "build>=1.0", "requests>=2.28", "uvicorn>=0.20", "hypothesis>=6.0"]

[project.scripts]
argus-redact = "argus_redact.cli.main:main"

[tool.maturin]
python-source = "src"
module-name = "argus_redact._core"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests that require model loading (deselect with '-m \"not slow\"')",
    "ner: marks tests that require NER models",
    "semantic: marks tests that require Layer 3 LLM",
]
filterwarnings = [
    "ignore::FutureWarning:torch.*",
    "ignore::UserWarning:thinc.*",
]
addopts = "-p no:recording"

[tool.mutmut]
paths_to_mutate = [
    "src/argus_redact/pure/replacer.py",
    "src/argus_redact/pure/restore.py",
    "src/argus_redact/pure/pseudonym.py",
]
tests_dir = ["tests/core/"]
also_copy = ["docs/", "README.md"]
pytest_add_cli_args = [
    "-p", "no:recording",
    "-m", "not ner and not semantic and not slow",
    "--deselect", "tests/core/test_redact.py::TestRedactWithNER",
    "--deselect", "tests/core/test_redact.py::TestRedactWithSemantic",
]
